# hello-c-extension

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  Taskfile.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
cmod/: _cmodule.cc
src/cmod/: __init__.py  _cmod.pyi  _cmodule.cc  pymod.py
tests/: test_cext.py
