[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-c-extension"
version = "0.6.0"
description = "Showcase use and packaging of a C++ extension module alongside pure Python code"
readme = "README.md"
requires-python = ">=3.10, <3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Brad Solomon" }]
maintainers = [{ name = "Brad Solomon" }]
keywords = [
    "c-extension",
    "cpp",
    "cpython",
    "packaging",
    "example",
    "tutorial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bsolomon1124/hello-c-extension"
Source = "https://github.com/bsolomon1124/hello-c-extension"
Changelog = "https://github.com/bsolomon1124/hello-c-extension/blob/master/CHANGELOG.md"
Issues = "https://github.com/bsolomon1124/hello-c-extension/issues"

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.7",
    "ty>=0.0.1a1",
]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cmod = ["py.typed", "*.pyi"]

[[tool.setuptools.ext-modules]]
name = "cmod._cmod"
sources = ["src/cmod/_cmodule.cc"]
language = "c++"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "ERA",  # eradicate (no commented-out code)
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "I",    # isort
    "ISC",  # implicit-str-concat
    "N",    # pep8-naming
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "TC",   # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "ISC001",  # conflicts with ruff format
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert is fine in tests
    "PLR2004", # magic numbers are fine in tests
    "SLF001",  # private access is fine in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=cmod --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["cmod"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ty.src]
include = ["src"]

[tool.cibuildwheel]
# CPython 3.10-3.14 on 64-bit Linux (manylinux), macOS, and Windows.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["*-musllinux_*", "*_i686", "*-win32"]
# Verify the built wheel actually imports on the target.
test-command = "python -c \"from cmod import CONSTANT, _cmod, pymod; assert _cmod.foo() == 5; assert CONSTANT == 10; assert _cmod.__name__ == 'cmod._cmod'; pymod.hello()\""

[tool.cibuildwheel.macos]
# Fat wheel covering both Apple Silicon and Intel Macs.
archs = "universal2"
